--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <title>Progate</title>
     </head>
     <body>
+        <img src="top.png">
         <h1 class="title">HTML & CSSの開発環境を用意しよう</h1>
         <p>自分のPCでWebページを開発する方法を学習しましょう</p>
     </body>
