--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
         <title>Progate</title>
     </head>
     <body>
+        <div class="main">
         <h1 class="title">HTML & CSSの開発環境を用意しよう</h1>
         <p>自分のPCでWebページを開発する方法を学習しましょう</p>
+        </div>
     </body>
 </html>
