--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@
         <title>Progate</title>
     </head>
     <body>
+       <div class="container">
         <div class="main">
         <h1 class="title">HTML & CSSの開発環境を用意しよう</h1>
         <p>自分のPCでWebページを開発する方法を学習しましょう</p>
         </div>
+       </div>
     </body>
 </html>
