--- a/index.html
+++ b/index.html
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
         <link rel="stylesheet" href="stylesheet.css">
         <meta charset="utf-8">
-        <title>Progate</title>
+        <title>tamako-no-page</title>
     </head>
     <body>
-       <div class="container">
-        <div class="main">
-        <h1 class="title">HTML & CSSの開発環境を用意しよう</h1>
-        <p>自分のPCでWebページを開発する方法を学習しましょう</p>
+        <div class="top-wrapper">
+            <div class="container">
+                <h1>welcome</h1>
+                <p></p>
+                <a href="https://twitter.com/1097lojaturive" class="btn twitter"><span class="fa fa-twitter"></span>Twitter</a>
+            </div>
         </div>
-       </div>
     </body>
 </html>
