--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <body>
         <div class="top-wrapper">
             <div class="container">
-                <h1>welcome</h1>
-                <p></p>
+                <h1>Currently studying programming</h1>
+                <p>i am NEET</p>
                 <a href="https://twitter.com/1097lojaturive" class="btn twitter"><span class="fa fa-twitter"></span>Twitter</a>
             </div>
         </div>
