--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             <div class="container">
                 <h1>Currently studying programming</h1>
                 <p>i am NEET</p>
-                <a href="https://twitter.com/1097lojaturive" class="btn twitter"><span class="fa fa-twitter"></span>Twitter</a>
+                <a href="https://twitter.com/owari63" class="btn twitter"><span class="fa fa-twitter"></span>Twitter</a>
             </div>
         </div>
     </body>
