--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
         <title>tamako-no-page</title>
     </head>
     <body>
+        <header>
+            <div class="container">
+                <div class="header-left">
+                    <img class="logo" src="logo.png">
+                </div>
+                <div class="header-right">
+                    <a href="#" class="page">About this page</a>
+                </div>
+            </div>
         <div class="top-wrapper">
             <div class="container">
                 <h1>Currently studying programming</h1>
