--- a/index.html
+++ b/index.html
@@ -16,12 +16,22 @@
                     <a href="#" class="page">About this page</a>
                 </div>
             </div>
+        </header>
         <div class="top-wrapper">
             <div class="container">
                 <h1>Currently studying programming</h1>
-                <p>i am NEET</p>
+                <p>23 years old<br>Japanese NEETs.<br>I'm studying for programming and the Basic Information Technology Engineer exam.</p>
                 <a href="https://twitter.com/owari63" class="btn twitter"><span class="fa fa-twitter"></span>Twitter</a>
+                <h2>I use Github as a record of my studies.</h2>
             </div>
         </div>
+        <footer>
+            <div class="container">
+                <div class="footer-left">tamtanko no page</div>
+                <div class="footer-right">
+                    <p>The author of this background<br>toto-tooruru 様</p>
+                </div>
+            </div>
+        </footer>
     </body>
 </html>
