--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div class="top-wrapper">
             <div class="container">
                 <h1>Currently studying programming</h1>
-                <p>23 years old<br>Japanese NEETs.<br>I'm studying for programming and the Basic Information Technology Engineer exam.</p>
+                <p>23 years old<br>i am a NEET.<br>I'm studying for programming and the Basic Information Technology Engineer exam.</p>
                 <a href="https://twitter.com/owari63" class="btn twitter"><span class="fa fa-twitter"></span>Twitter</a>
                 <h2>I use Github as a record of my studies.</h2>
             </div>
